--- a/NRBank/.classpath
+++ b/NRBank/.classpath
@@ -17,6 +17,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Nere/Desktop/HN Formation/JAVA SE/NRBank/NRBank/libraries/gson-2.2.2.jar"/>
+	<classpathentry kind="lib" path="libraries/gson-2.2.2.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
